Fix about button alignment on iphone

--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -34,10 +34,12 @@
 }
 
 #button2 {
-    width: 220px;
+    width: fit-content;
     height: 2.5rem;
-    padding: 1.5rem;
-    margin: 25px auto 10px;
+    padding: 1.8rem;
+    margin-top: 25px;
+    margin-right: auto;
+    margin-left: auto;
     font-family: 'Poppins', sans-serif;
     color: white;
     font-size: 15px;
